<resources>
    <string name="app_name">ConverSign</string>
    <string name="welcome_message">Welcome \nto ConverSign</string>
    <string name="welcome_subtitle">Let your hands do the talking! We are your game-powered coach for Filipino Sign Language. With AI sign detection, real-time feedback, and interactive challenges, you’ll level up your skills in no time.</string>
    <string name="begin_my_journey">Begin My Journey</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="individual">Individual</string>
    <string name="educator">Educator</string>
    <string name="student">Student</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="phone_no">Phone No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="create_my_account">Create My Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_email_or_password">Please enter email or password.</string>
    <string name="invalid_credentials_please_try_again">Invalid credentials, please try again.</string>
    <string name="please_select_a_role">Please select a role.</string>
    <string name="role_cannot_be_empty">Role cannot be empty</string>
    <string name="level_value">Level: %1$s</string>
    <string name="selection_title">%1$s %2$s:\t\t%3$s</string>
    <string name="ai_camera_tip">Tip: For the best experience, ensure the camera has a clear view—no obstructions between you and the lens. Stay in sight, stay sharp!</string>
    <string name="gesture_detected">Gesture Detected!</string>
    <string name="previous">Previous</string>
    <string name="section_1_rookie">Section 1: Rookie</string>
    <string name="challenge">Challenge</string>
    <string name="lesson">Lesson</string>
    <string name="lesson_number">Lesson %1$d</string>
    <string name="section_select">Section Select</string>
    <string name="section_selection">Select a Section</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="class_code_with_value">Class Code: %1$s</string>
    <string name="created_at">Created at %1$s</string>
    <string name="class_code">Class Code</string>
    <string name="class_code_cannot_be_empty">Ask your supervisor for you class code.</string>
    <string name="cannot_find_class_code">Cannot find the class code.</string>
    <string name="sign_value">Sign \"%1$s\"</string>
    <string name="next">Next</string>
    <string name="you_got_that_correctly">You got that correctly</string>
    <string name="nice_job">Nice Job!</string>
    <string name="roadmap">Roadmap</string>
    <string name="section_dash_level">%1$s - %2$s</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accessibility">Accessibility</string>
    <string name="about">About</string>
    <string name="to_do_list">To-do list</string>
    <string name="note_taking">Note-taking</string>
    <string name="badges_and_achievements">Badges and Achievements</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="challenge_sign">Challenge:\nSign \"%1$s\"</string>
</resources>