<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="35dp">

    <RadioGroup
        android:id="@+id/roleRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/individualRadioButton"
            style="@style/RadioButtonStyle"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/individual"
            tools:checked="true" />

        <RadioButton
            android:id="@+id/educatorRadioButton"
            style="@style/RadioButtonStyle"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/educator" />

        <RadioButton
            android:id="@+id/studentRadioButton"
            style="@style/RadioButtonStyle"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/student" />
    </RadioGroup>
</LinearLayout>