<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:visibility="visible"
    tools:context=".student.fragments.ChallengeFragment"
    tools:visibility="visible">


    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_padding"
        android:fontFamily="@font/k2d_extrabolditalic"
        android:text="@string/ai_camera_tip"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
    <androidx.camera.view.PreviewView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="46dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/tipTextView" />

    <TextView
        android:id="@+id/gestureDetectedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/k2d_extrabolditalic"
        android:gravity="center"
        android:text="@string/gesture_detected"
        android:textColor="@color/nice_job_text_color"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/challenge_previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textColor="@color/deep_green"
        android:textSize="18sp"
        app:backgroundTint="@color/screen_bg"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@id/cameraView"
        app:layout_constraintTop_toBottomOf="@id/gestureDetectedTextView"
        app:strokeColor="@color/deep_green"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:id="@+id/niceJobLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nice_job_bg_color"
        android:elevation="1dp"
        android:orientation="vertical"
        android:padding="@dimen/app_padding"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/k2d_semibold"
            android:text="@string/nice_job"
            android:textColor="@color/nice_job_text_color"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_got_that_correctly"
            android:textColor="@color/nice_job_text_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/screen_bg"
            android:textSize="18sp"
            app:backgroundTint="@color/nice_job_button_bg_color"
            app:cornerRadius="10dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>