<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    android:padding="@dimen/app_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/welcomeImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/welcome_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_message"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeImageView" />

    <TextView
        android:id="@+id/welcomeSubTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/beginJourneyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_my_journey"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="#8299A4"
        app:cornerRadius="16dp"
        app:icon="@drawable/right_arrow"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeSubTextView"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>